--- a/engine-client/src/app/home/home.component.html
+++ b/engine-client/src/app/home/home.component.html
@@ -1,3 +1,7 @@
-<p>
-  home works!
-</p>
+<!DOCTYPE html>
+<title>Example</title>
+
+<!-- HTML -->
+<div class="example1">
+  <h3>Scrolling text... </h3>
+</div>
