--- a/engine-client/src/app/home/home.component.html
+++ b/engine-client/src/app/home/home.component.html
@@ -1,3 +1,4 @@
 <div class="example1">
-  <h3>Scrolling text... ({{itemCount}})</h3>
+  <h3 ngFor="let product of products;">Scrolling text... ({{product}})</h3>
 </div>
+
