just need to work on styling

--- a/engine-client/src/app/home/home.component.html
+++ b/engine-client/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="example1">
-  <h3 *ngFor="let product of products">Scrolling text... ({{product}})</h3>
+<div *ngFor="let value of values" ngFor = "let key of keys" class="example1" >
+  <h3 >{{value.base_currency + '-' + value.quote_currency}} {{value.price}}</h3>
 </div>
 
