--- a/engine-client/src/app/home/home.component.css
+++ b/engine-client/src/app/home/home.component.css
@@ -5,9 +5,10 @@
   }
 
   .example1 h3 {
+    display: block;
     font-size: 3em;
     color: limegreen;
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 100%;
     margin: 0;
