--- a/engine-client/src/app/home/home.component.html
+++ b/engine-client/src/app/home/home.component.html
@@ -3,18 +3,18 @@
   <table>
     <tr>
       <th>Name</th>
-      <th>Gdax Price</th>
-      <th>Gemini Price</th>
-      <th>Kraken Price</th>
-      <th>Coinbase Price</th>
+      <th [style.background-color] = "prodService.gdaxStatus" >Gdax Price</th>
+      <th [style.background-color] = "prodService.geminiStatus" >Gemini Price</th>
+      <th [style.background-color] = "prodService.krakenStatus" >Kraken Price</th>
+      <th [style.background-color] = "prodService.coinbaseStatus" >Coinbase Price</th>
       <th>Spread</th>
     </tr>
     <tr  *ngFor="let value of values" ngFor = "let key of keys" class="example1">
       <td class="productName">{{value.product_name}}</td>
-      <td [style.background-color]="gdaxPrice(value)" class="price" >{{value.price}}<hr>{{value.time}}</td>
-      <td [style.background-color]="geminiPrice(value)" class="price">{{value.g_price}}<hr>{{value.g_time}}</td>
-      <td [style.background-color]="krakenPrice(value)" class="price">{{value.k_price}}<hr>{{value.k_time}}</td>
-      <td [style.background-color]="coinbasePrice(value)" class="price">{{value.c_price}}<hr>{{value.c_time}}</td>
+      <td [style.background-color]="gdaxPrice(value)" class="price"><span>{{value.price}}</span><hr>{{value.time}}</td>
+      <td [style.background-color]="geminiPrice(value)" class="price"><span>{{value.g_price}}</span><hr>{{value.g_time}}</td>
+      <td [style.background-color]="krakenPrice(value)" class="price"><span>{{value.k_price}}</span><hr>{{value.k_time}}</td>
+      <td [style.background-color]="coinbasePrice(value)" class="price"><span>{{value.c_price}}</span><hr>{{value.c_time}}</td>
       <td class="spread">{{spread(value)}}</td>
     </tr>
   </table>
